# Messenger_HSE_lab

./: .gitignore  README.md
Client/: CMakeLists.txt  main.c  shortDoc.txt
Client/DataBaseConfiguration/: dbConfiguration.c  dbConfiguration.h
Client/DataBaseController/: dbController.c  dbController.h
Client/GlobalConfigs/: configs.c  configs.h
Client/RequestHandler/Main/: RequestHandler.c  RequestHandler.h
Client/StartConfiguration/: starApp.c
Client/UserInterface/: Commands.c  Commands.h
Client/structures/Friends/: Freinds.cpp
Client/structures/Message/: message.c
Server/: CMakeLists.txt  main.c  server  shortDoc.txt
Server/GlobalConfigs/: GlobalCOnfigs.c  GlobalCOnfigs.h
Server/HelpScripts/: HelpScripts.c  HelpScripts.h
Server/RequestHandler/: RequestHandler.c  RequestHandler.h
Server/StartConfiguration/: StartConfiguration.c  StartConfiguration.h
Server/Structures/MessageList/: MessageList.c  MessageList.h
Server/Structures/RequestAnswer/: RequestAnswer.c  RequestAnswer.h
Server/TestClient/: CMakeLists.txt  client  dbName.txt  main.c  s1
Server/TestClient/DataBaseController/: dbController.c  dbController.h
Server/TestClient/GlobalConfigs/: configs.c  configs.h
Server/TestClient/InputForms/: forms.c  forms.h
Server/TestClient/RequestHandler/HelpScripts/: RequestMaker.c  RequestMaker.h
Server/TestClient/RequestHandler/Main/: RequestHandler.c  RequestHandler.h
Server/TestClient/StartConfiguration/: starApp.c  starApp.h
Server/TestClient/UserInterface/: Commands.c  Commands.h
Server/TestClient/structures/Connection/: connection_data.c  connection_data.h
Server/TestClient/structures/Friends/: Freinds.h
Server/TestClient/structures/Message/: message.h
Server/TestClient/structures/User/: user.c  user.h
Server/UUID/: UuidGenerator.c  UuidGenerator.h
Server/dbController/: dbController.c  dbController.h
